objects/Seminar__c.object
<CustomObject>
    <fields>
        <fullName>Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cost</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:15 AM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_no_of_people__c</fullName>
        <label>Max.no.of people</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Speaker__c</fullName>
        <label>Speaker</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spk_Company__c</fullName>
        <label>Spk_Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spk_DesigAndDept__c</fullName>
        <label>Spk_DesigAndDept</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spk_SeminarRole__c</fullName>
        <label>Spk_SeminarRole</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spk_image__c</fullName>
        <label>Spk_image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:15 AM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Track__c</fullName>
        <label>Track</label>
        <referenceTo>Track__c</referenceTo>
        <relationshipLabel>Seminar</relationshipLabel>
        <relationshipName>Seminar</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Seminar</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Seminar</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>